Issue 3038 added js libs for scrollbar

--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -234,5 +234,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 	white-space: nowrap;
 }
 
-
+.gmap {}
+.gmap > div > .gmnoprint:nth-child(3n+1),
+.gmap > div > .gmnoprint:last-child { top: 40px !important;}
 
